--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "corrently-charge",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Reference implementation of flexible charging tariffs for CPOs and EMTs based on Green Power Index and SolarEnergyPrediction APIs. Part of #mobilitython2022 - Enpulse challenge.",
   "main": "lib.js",
   "scripts": {
-    "test": "mocha -w"
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
